--- a/Infrastructure/SocialbookAPI.Infrastructure/SocialbookAPI.Infrastructure.csproj
+++ b/Infrastructure/SocialbookAPI.Infrastructure/SocialbookAPI.Infrastructure.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\SocialbookAPI.Application\SocialbookAPI.Application.csproj" />
+  </ItemGroup>
+
 </Project>
