--- a/Infrastructure/SocialbookAPI.Persistence/SocialbookAPI.Persistence.csproj
+++ b/Infrastructure/SocialbookAPI.Persistence/SocialbookAPI.Persistence.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Core\SocialbookAPI.Application\SocialbookAPI.Application.csproj" />
+    <ProjectReference Include="..\SocialbookAPI.SignalR\SocialbookAPI.SignalR.csproj" />
   </ItemGroup>
 
 </Project>
